[package]
name = "rust-hope"
version = "0.1.0"
authors = ["bramm <georg.bramm@aisec.fraunhofer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bn = { git = "https://github.com/georgbramm/bn" }
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"
paillier = { git = "https://github.com/georgbramm/rust-paillier" }
rand = "0.3"
mongodb = "0.4.0"
bincode = "1.2.1"
actix-web = "2.0"