[package]
name = "rust-hope"
version = "0.1.1"
authors = ["Georg Bramm <georg.bramm@aisec.fraunhofer.de>"]
edition = "2018"
description = "A Rust implementation of the ehOPE encryption scheme"
keywords = [
  "paillier",
  "elgamal",
  "cryptography",
  "homomorphic-encrypt",
  "secure-computation",
]
homepage = "https://github.com/georgbramm/rust-hope"
repository = "https://github.com/georgbramm/rust-hope"
# documentation = "https://docs.rs/rust-hope"
license = "MIT/Apache-2.0"
categories = ["cryptography"]

[lib]
name = "rust_hope"
crate-type = ["staticlib"]

[[bin]]
name = "server"
path = "src/main.rs"

[badges]
travis-ci = { repository = "https://github.com/georgbramm/rust-hope" }
gitlab = { repository = "...", branch = "master" }
maintenance = { status = "experimental" }

[dependencies] 
bn = { git = "https://github.com/georgbramm/bn" }
actix = "0.9.0"
actix-codec = "0.2.0"
actix-web = { version="2.0.0", features=["openssl"] }
actix-web-actors = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-service = "1.0.0"
serde = "1.0.16"
serde_json = "1.0.4"
serde_derive = "1.0.16"
paillier = { git = "https://github.com/georgbramm/rust-paillier" }
rand = "0.3"
mongodb = "0.4.0"
env_logger = "0.6"
bincode = "1.2.1"